<resources>
    <string name="app_name">Movieverse</string>
    <string name="yearOfRelease" translatable="false">(%d)</string>
    <!-- Navigation !-->
    <string name="title_home">Home</string>
    <string name="title_details">Details</string>
    <string name="title_cinemas">Cinemas nearby</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_cast_details">Cast Details</string>
    <string name="title_settings">Settings</string>
    <string name="cd_home">Home</string>
    <string name="cd_favorites">Favorites</string>
    <string name="cd_cinemas">Cinemas</string>
    <string name="cd_settings">Settings</string>

    <!-- Home screen-->
    <string name="added_to_fav">Added to favourites!</string>
    <string name="remove_from_fav">Removed from favourites!</string>
    <string name="already_in_db">Already saved to favourites!</string>

    <!--Movie details-->
    <string name="director">Directed by %s</string>
    <string name="writer">Written by %s</string>

    <!--Cast member!-->
    <string name="cast_character">%s</string>

    <!--Person details-->
    <string name="person_birth_date">%d-%d-%d</string>
    <string name="person_birth_place">at %s</string>

    <!-- Favorites screen-->
    <string name="fav_movie_deleted">%s removed!</string>
</resources>