<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:contentDescription="@string/cd_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/favorites"
        android:contentDescription="@string/cd_favorites"
        android:icon="@drawable/ic_favorites_off"
        android:title="@string/title_favorites" />
    <item
        android:id="@+id/cinemas"
        android:contentDescription="@string/cd_cinemas"
        android:icon="@drawable/ic_cinemas"
        android:title="@string/title_cinemas" />
    <item
        android:id="@+id/account"
        android:contentDescription="@string/cd_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />

</menu>