<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    app:startDestination="@+id/homeScreen">

    <fragment
        android:id="@+id/homeScreen"
        android:name="com.example.movieverse.fragment.HomeScreen"
        android:label="@string/title_home"
        tools:layout="@layout/home_screen">
        <action
            android:id="@+id/action_HomeScreen_to_MovieDetails"
            app:destination="@+id/movieDetails" />
    </fragment>

    <fragment
        android:id="@+id/movieDetails"
        android:name="com.example.movieverse.fragment.MovieDetailsScreen"
        android:label="@string/title_details"
        tools:layout="@layout/movie_details_screen">
        <action
            android:id="@+id/action_MovieDetailsScreen_to_CastDetailsScreen"
            app:destination="@+id/castDetails" />
        <action
            android:id="@+id/action_MovieDetailsScreen_to_MovieDetailsScreen"
            app:destination="@id/movieDetails"
            />
        <argument
            android:name="selectedMovieId"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="selectedMoviePoster"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="selectedMovieTitle"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="selectedReleaseDate"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="selectedRating"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_MovieDetailsScreen_to_HomeScreen"
            app:destination="@+id/home" />
    </fragment>
    <fragment
        android:id="@+id/castDetails"
        android:name="com.example.movieverse.fragment.PersonDetailsScreen"
        android:label="@string/title_cast_details"
        tools:layout="@layout/person_details_screen">
        <action
            android:id="@+id/action_PersonDetailsScreen_to_MovieDetailsScreen"
            app:destination="@id/movieDetails"
            />
        <argument
            android:name="selectedPersonId"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="selectedPersonImage"
            android:defaultValue=""
            app:argType="string" />
    </fragment>
</navigation>
